# torqata_datascience

./: .gitignore  README.md  main.ipynb  pyproject.toml
